# PacBio_Kinnex_16S-ITS-23S_Microbiome_Analysis_Harness

./: .dockerignore  .gitignore  16S_rRNA_Sequencing_Analysis.py  Dockerfile  LATEST.md  README.md  environment.yml  module_setup.example.sh  mothur_processing.py  pyproject.toml  release_manifest.json  requirements.txt
.github/workflows/: ci.yml
config/: database_profiles.example.yaml  expected_taxa.example.tsv  project.example.yaml
docs/: cross_mode_comparison.md  downstream_routing.md  emu_abundance_mode.md  html_report.md  limitations.md  methods.md  mock_community_validation.md  mothur_options.md  pbmm2_mapping_mode.md  reproducible_execution.md  validation_plan.md  workflow_integration.md
scripts/: run_mothur.py  run_preprocess.py
src/kinnex16s/: __init__.py  __main__.py  barcode_validation.py  cli.py  commands.py  comparison_report.py  config.py  downstream_router.py  emu_runner.py  fasta_group_builder.py  html_report.py  mothur_runner.py  pacbio_preprocess.py  pbmm2_runner.py  validation_report.py  validators.py
tests/: test_barcode_validation.py  test_cli_config.py  test_command_construction.py  test_comparison_report.py  test_downstream_router.py  test_emu_runner.py  test_group_file_builder.py  test_html_report.py  test_integration_validation_comparison.py  test_mothur_cli.py  test_mothur_command_builders.py  test_mothur_config.py  test_mothur_configured_runtime.py  test_packaging_scaffold.py  test_pbmm2_runner.py  test_sample_sheet_parser.py  test_validation_report.py
tests/fixtures/: mapping_qc.example.tsv  (+9 more)
workflows/: Snakefile  config.example.yaml
